--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Apr 28 2021 02:47:44 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon May 03 2021 19:37:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608831fed0ef979f72ee33ec" data-wf-site="608831fdd0ef97482fee33d8">
 <head>
   <meta charset="utf-8">
@@ -71,7 +71,7 @@
   <div class="about-section"><img src="images/x-black_1x-black.png" width="52" alt="" class="x-icon">
     <div class="w-container">
       <p class="about-text">In a 4-week final exam &quot;mini&quot; capstone project,  students  applied skills learned in HCAN 361 to query data using Microsoft&#x27;s SQL Server Management Studio or Azure Data Studio as the primary data management platforms. Data sources, which were loaded onto a server, available to students for their project go as follows: 1) American Hospital Association Database, 2) US Census American Community Survey 2018 5-Year Estimates (at census tract level), 3) automobile routing data highlighting travel time between census tract centroids and each US Hospital, and 4) other neighborhood level socioeconomic and rurality measures. Full details of used data sources are detailed in a notebook accessible by clicking the button below.</p>
-      <a href="https://nbviewer.jupyter.org/github/lewis060-UAT/cipsLect/blob/main/pics/Group%20Projects/Description/HCAN361_FinalProject_DataDescription.ipynb" target="_blank" class="button">Details About Project Data Sources</a>
+      <a href="https://github.com/lewis060-UAT/HCAN_Projects/blob/main/Project_Notebooks/HCAN361_FinalProject_DataDescription.ipynb" target="_blank" class="button">Details About Project Data Sources</a>
     </div>
   </div>
   <div id="projects" class="section grey">
@@ -81,7 +81,7 @@
       <div class="divider grey"></div>
       <div class="w-row">
         <div class="w-col w-col-4 w-col-small-4">
-          <a href="https://nbviewer.jupyter.org/github/lewis060-UAT/cipsLect/blob/main/pics/Group%20Projects/Group%201/HCAN361_Group1_FinalProj.ipynb" target="_blank" class="project-wrapper w-inline-block"><img src="images/urgent-Care.jpg" width="395" sizes="(max-width: 479px) 92vw, (max-width: 767px) 30vw, (max-width: 991px) 229.328125px, 299.984375px" srcset="images/urgent-Care-p-500.jpeg 500w, images/urgent-Care-p-1080.jpeg 1080w, images/urgent-Care-p-1600.jpeg 1600w, images/urgent-Care-p-2000.jpeg 2000w, images/urgent-Care-p-2600.jpeg 2600w, images/urgent-Care-p-3200.jpeg 3200w, images/urgent-Care.jpg 4928w" alt="">
+          <a href="https://github.com/lewis060-UAT/cipsLect/blob/main/pics/Group%20Projects/Group%201/HCAN361_Group1_FinalProj.ipynb" target="_blank" class="project-wrapper w-inline-block"><img src="images/urgent-Care.jpg" width="395" sizes="(max-width: 479px) 92vw, (max-width: 767px) 30vw, (max-width: 991px) 229.328125px, 299.984375px" srcset="images/urgent-Care-p-500.jpeg 500w, images/urgent-Care-p-1080.jpeg 1080w, images/urgent-Care-p-1600.jpeg 1600w, images/urgent-Care-p-2000.jpeg 2000w, images/urgent-Care-p-2600.jpeg 2600w, images/urgent-Care-p-3200.jpeg 3200w, images/urgent-Care.jpg 4928w" alt="">
             <div class="project-info">
               <h3 class="project-title">urgent care</h3>
               <div>Deep South United States</div>
@@ -90,7 +90,7 @@
         </div>
         <div class="w-col w-col-4 w-col-small-4">
           <div class="project-wrapper">
-            <a href="https://nbviewer.jupyter.org/github/lewis060-UAT/HCAN_Projects/blob/main/Project_Notebooks/HCAN361_Group2_FinalProj.ipynb" target="_blank" class="project-wrapper w-inline-block"><img src="images/nurse.jpg" sizes="(max-width: 479px) 96vw, (max-width: 767px) 30vw, (max-width: 991px) 229.328125px, 299.984375px" srcset="images/nurse-p-1080.jpeg 1080w, images/nurse-p-1600.jpeg 1600w, images/nurse-p-2000.jpeg 2000w, images/nurse-p-2600.jpeg 2600w, images/nurse-p-3200.jpeg 3200w, images/nurse.jpg 5260w" alt="">
+            <a href="https://github.com/lewis060-UAT/HCAN_Projects/blob/main/Project_Notebooks/HCAN361_Group2_FinalProj.ipynb" target="_blank" class="project-wrapper w-inline-block"><img src="images/nurse.jpg" sizes="(max-width: 479px) 96vw, (max-width: 767px) 30vw, (max-width: 991px) 229.328125px, 299.984375px" srcset="images/nurse-p-1080.jpeg 1080w, images/nurse-p-1600.jpeg 1600w, images/nurse-p-2000.jpeg 2000w, images/nurse-p-2600.jpeg 2600w, images/nurse-p-3200.jpeg 3200w, images/nurse.jpg 5260w" alt="">
               <div class="project-info">
                 <h3 class="project-title">Nursing workforce</h3>
                 <div>United States</div>
@@ -100,7 +100,7 @@
         </div>
         <div class="w-col w-col-4 w-col-small-4">
           <div class="project-wrapper">
-            <a href="https://nbviewer.jupyter.org/github/lewis060-UAT/HCAN_Projects/blob/main/Project_Notebooks/HCAN361_Group3_FinalProj.ipynb" target="_blank" class="project-wrapper w-inline-block"><img src="images/covid.jpg" width="430" sizes="(max-width: 479px) 92vw, (max-width: 767px) 30vw, (max-width: 991px) 229.328125px, 299.984375px" srcset="images/covid-p-800.jpeg 800w, images/covid-p-1600.jpeg 1600w, images/covid-p-2000.jpeg 2000w, images/covid-p-2600.jpeg 2600w, images/covid-p-3200.jpeg 3200w, images/covid.jpg 4000w" alt="">
+            <a href="https://github.com/lewis060-UAT/HCAN_Projects/blob/main/Project_Notebooks/HCAN361_Group3_FinalProj.ipynb" target="_blank" class="project-wrapper w-inline-block"><img src="images/covid.jpg" width="430" sizes="(max-width: 479px) 92vw, (max-width: 767px) 30vw, (max-width: 991px) 229.328125px, 299.984375px" srcset="images/covid-p-800.jpeg 800w, images/covid-p-1600.jpeg 1600w, images/covid-p-2000.jpeg 2000w, images/covid-p-2600.jpeg 2600w, images/covid-p-3200.jpeg 3200w, images/covid.jpg 4000w" alt="">
               <div class="project-info">
                 <h3 class="project-title">airborne infection rooms</h3>
                 <div>United States</div>
@@ -111,7 +111,7 @@
       </div>
       <div class="w-row">
         <div class="w-col w-col-4 w-col-small-4">
-          <a href="https://nbviewer.jupyter.org/github/lewis060-UAT/HCAN_Projects/blob/main/Project_Notebooks/HCAN361_Group4_FinalProj.ipynb" target="_blank" class="project-wrapper w-inline-block"><img src="images/pregnant.jpg" sizes="(max-width: 479px) 96vw, (max-width: 767px) 30vw, (max-width: 991px) 229.328125px, 299.984375px" srcset="images/pregnant-p-1080.jpeg 1080w, images/pregnant-p-1600.jpeg 1600w, images/pregnant-p-2000.jpeg 2000w, images/pregnant-p-2600.jpeg 2600w, images/pregnant-p-3200.jpeg 3200w, images/pregnant.jpg 5971w" alt="">
+          <a href="https://github.com/lewis060-UAT/HCAN_Projects/blob/main/Project_Notebooks/HCAN361_Group4_FinalProj.ipynb" target="_blank" class="project-wrapper w-inline-block"><img src="images/pregnant.jpg" sizes="(max-width: 479px) 96vw, (max-width: 767px) 30vw, (max-width: 991px) 229.328125px, 299.984375px" srcset="images/pregnant-p-1080.jpeg 1080w, images/pregnant-p-1600.jpeg 1600w, images/pregnant-p-2000.jpeg 2000w, images/pregnant-p-2600.jpeg 2600w, images/pregnant-p-3200.jpeg 3200w, images/pregnant.jpg 5971w" alt="">
             <div class="project-info">
               <h3 class="project-title">obstetric services</h3>
               <div>California, New York, and Alabama</div>
@@ -130,7 +130,7 @@
         </div>
         <div class="w-col w-col-4 w-col-small-4">
           <div class="project-wrapper">
-            <a href="https://nbviewer.jupyter.org/github/lewis060-UAT/HCAN_Projects/blob/main/Project_Notebooks/HCAN361_Group6_FinalProj.ipynb" target="_blank" class="project-wrapper w-inline-block"><img src="images/imaging-equip.jpg" sizes="(max-width: 479px) 96vw, (max-width: 767px) 30vw, (max-width: 991px) 229.328125px, 299.984375px" srcset="images/imaging-equip-p-1080.jpeg 1080w, images/imaging-equip-p-1600.jpeg 1600w, images/imaging-equip-p-2000.jpeg 2000w, images/imaging-equip-p-2600.jpeg 2600w, images/imaging-equip-p-3200.jpeg 3200w, images/imaging-equip.jpg 6063w" alt="">
+            <a href="https://github.com/lewis060-UAT/HCAN_Projects/blob/main/Project_Notebooks/HCAN361_Group6_FinalProj.ipynb" target="_blank" class="project-wrapper w-inline-block"><img src="images/imaging-equip.jpg" sizes="(max-width: 479px) 96vw, (max-width: 767px) 30vw, (max-width: 991px) 229.328125px, 299.984375px" srcset="images/imaging-equip-p-1080.jpeg 1080w, images/imaging-equip-p-1600.jpeg 1600w, images/imaging-equip-p-2000.jpeg 2000w, images/imaging-equip-p-2600.jpeg 2600w, images/imaging-equip-p-3200.jpeg 3200w, images/imaging-equip.jpg 6063w" alt="">
               <div class="project-info">
                 <h3 class="project-title">imaging equipment</h3>
                 <div>Deep South United States</div>
@@ -141,7 +141,7 @@
       </div>
       <div class="w-row">
         <div class="w-col w-col-4 w-col-small-4">
-          <a href="https://nbviewer.jupyter.org/github/lewis060-UAT/HCAN_Projects/blob/main/Project_Notebooks/HCAN361_Group7_FinalProj.ipynb" target="_blank" class="project-wrapper w-inline-block"><img src="images/Telestroke2.jpg" sizes="(max-width: 479px) 96vw, (max-width: 767px) 30vw, (max-width: 991px) 229.328125px, 299.984375px" srcset="images/Telestroke2-p-500.jpeg 500w, images/Telestroke2-p-800.jpeg 800w, images/Telestroke2.jpg 1000w" alt="">
+          <a href="https://github.com/lewis060-UAT/HCAN_Projects/blob/main/Project_Notebooks/HCAN361_Group7_FinalProj.ipynb" target="_blank" class="project-wrapper w-inline-block"><img src="images/Telestroke2.jpg" sizes="(max-width: 479px) 96vw, (max-width: 767px) 30vw, (max-width: 991px) 229.328125px, 299.984375px" srcset="images/Telestroke2-p-500.jpeg 500w, images/Telestroke2-p-800.jpeg 800w, images/Telestroke2.jpg 1000w" alt="">
             <div class="project-info">
               <h3 class="project-title">telestroke</h3>
               <div>Deep South United States</div>
@@ -150,7 +150,7 @@
         </div>
         <div class="w-col w-col-4 w-col-small-4">
           <div class="project-wrapper">
-            <a href="https://nbviewer.jupyter.org/github/lewis060-UAT/HCAN_Projects/blob/main/Project_Notebooks/HCAN361_Group8_FinalProj.ipynb" target="_blank" class="project-wrapper w-inline-block"><img src="images/hospital-close.jpg" sizes="(max-width: 479px) 96vw, (max-width: 767px) 30vw, (max-width: 991px) 229.328125px, 299.984375px" srcset="images/hospital-close-p-500.jpeg 500w, images/hospital-close.jpg 650w" alt="">
+            <a href="https://github.com/lewis060-UAT/HCAN_Projects/blob/main/Project_Notebooks/HCAN361_Group8_FinalProj.ipynb" target="_blank" class="project-wrapper w-inline-block"><img src="images/hospital-close.jpg" sizes="(max-width: 479px) 96vw, (max-width: 767px) 30vw, (max-width: 991px) 229.328125px, 299.984375px" srcset="images/hospital-close-p-500.jpeg 500w, images/hospital-close.jpg 650w" alt="">
               <div class="project-info">
                 <h3 class="project-title">What if more hospitals close?</h3>
                 <div>Deep South United States</div>
